--- a/client/home.html
+++ b/client/home.html
@@ -76,7 +76,7 @@
                         <h4 style="margin-top: 50px">Enter your Weight</h4>
                         <form class="js-weight">
                             <input class="weightMeasure" type="number" name="weight" placeholder="Only Numbers in KiloGrams" min="0" step="0.5">
-                            <button style="background: transparent; margin-top: 30px;" class="exerciseBtn button2" type="submit">Ok</button>
+                            <button href="#exercise" style="border:none; background: transparent; margin-top: 30px;" class="exerciseBtn button2" type="submit">Ok</button>
                         </form>
                     </div>
                 </div>
@@ -113,7 +113,28 @@
 
             </div>
         </section>
+<section id="results">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h1>Fitness 101</h1>
+                <h3>Calculator Go Results</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4 bodyType text-center">
+                <div class="row cal-details">
+                    <div class="col-xs-4">Consumed <br> <span class="values">{{consumed}}</span> <br>cal</div>
+                    <div class="col-xs-4">Burnt <br> <span class="values">{{burnt}}</span> <br>cal</div>
+                    <div class="col-xs-4">Total <br> <span class="values">{{total}}</span> <br>cal</div>
+                </div>
 
+                <img class="img-responsive center-block" src="img/{{bodyType}}.png" alt="">
+                <h5>You will get/remain: <span class="values">{{bodyType}}</span></h5>
+            </div>
+        </div>
+    </div>
+</section>
 
     <!-- Container Closed -->
 
