--- a/client/home.html
+++ b/client/home.html
@@ -1,3 +1,8 @@
+<head>
+    <meta name="viewport" content="user-scalable no, width=device-width, maximum-scale=1, initial-scale=1, minimum-scale=1">
+</head>
+
+
 <template name="home">
         <section id="splashScreen">
             <div class="container">
