--- a/client/home.html
+++ b/client/home.html
@@ -8,7 +8,7 @@
             <div class="container">
             <!-- Call to Actions-->
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12 col-xs-12">
                         <div id="main">
                             <h1 class="thin pacifico">Fitness 101</h1>
 
@@ -19,7 +19,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12 text-center">
+                    <div class="col-md-12 col-xs-12 text-center">
                         <img id="breadImg" src="img/bread.png" alt="">
                     </div>
                 </div>
@@ -28,27 +28,27 @@
 
         <div class="container">
         <section id="getStarted">
-            <div class="row" style="padding-right: 40px;">
-                <div class="col-md-6 text-center">
+            <div class="row">
+                <div class="col-md-6 col-xs-12 text-center">
                     <h1>Let’s count your calories intake</h1>
                     <h5>we create delicious memories</h5>
                     <p>Fitness 101 is an awareness platform for indivduals to recognise where <br> they lie on the obesity scale.
                         Whether they need to check their diet or <br> they’re good to go.</p>
                     <h4>Testimonials</h4>
                     <div class="row">
-                        <div class="col-md-2 col-md-offset-3">
+                        <div class="col-md-2 col-xs-12 col-md-offset-3">
                            <h4>Hammad</h4>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 col-xs-12">
                             <img class="img-circle" src="img/testimonial.png" alt="testimonial" width="100">
                         </div>
-                        <div class="col-md-2">
+                        <div class="col-md-2 col-xs-12">
                             <h4>Siddiqui</h4>
                         </div>
                     </div>
 
-                    <p>I’ve become more aware of my body! <br>
-                        Thankyou Fitness 101.</p>
+                    <p>"I’ve become more aware of my body! <br>
+                        Thankyou Fitness 101."</p>
                 </div>
                 <div class="col-md-6">
                     <img class="img-responsive" src="img/getstarted.jpg" alt="">
@@ -61,15 +61,15 @@
         <section id="appetite">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 text-center">
+                    <div class="col-md-12 col-xs-12 text-center">
                         <h1>Appetite</h1>
                         <h4>Enter your regular consumptions on an average day</h4>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4">
-                        <select class="chzn-select" multiple="true" name="food" style="width:200px;">
+                    <div class="col-md-4 col-md-offset-4 col-xs-12">
+                        <select class="form-control chzn-select" multiple="true" name="food" style="width:100%;">
                          {{#each food}}
                             <option value={{value}}>{{meal}}</option>
                          {{/each}}
@@ -77,11 +77,11 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4 text-center">
+                    <div class="col-md-4 col-md-offset-4 col-xs-12 text-center">
                         <h4 style="margin-top: 50px">Enter your Weight</h4>
                         <form class="js-weight">
-                            <input class="weightMeasure" type="number" name="weight" placeholder="Only Numbers in KiloGrams" min="0" step="0.5">
-                            <button href="#exercise" style="border:none; background: transparent; margin-top: 30px;" class="exerciseBtn button2" type="submit">Ok</button>
+                            <input style="width: 100%;" class="weightMeasure form-control" type="number" name="weight" placeholder="Only Numbers in KiloGrams" min="0" step="0.5">
+                            <a data-scroll href="#exercise"><button data-scroll  style="border:none; background: transparent; margin-top: 30px;" class="exerciseBtn button2" type="submit">Ok</button></a>
                         </form>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                         </div>
 
                     </div>
-                    <div class="col-md-5 text-center">
+                    <div class="col-md-5 col-xs-12 col-lg-5  col-sm-5 text-center">
                         <div id="letsGo">
                             <h2>Step 3
                                 Calculator GO</h2>
@@ -110,7 +110,7 @@
                                 Fitness 101 in no way is trying to body shame you
                                 but ust creating health awareness about
                                 obesity.</p>
-                            <a href="#" class="exerciseBtn button3">Go</a>
+                            <a data-scroll href="#results" class="exerciseBtn button3">Go</a>
                         </div>
 
                     </div>
