--- a/client/home.html
+++ b/client/home.html
@@ -51,7 +51,7 @@
                         Thankyou Fitness 101."</p>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive" src="img/getstarted.jpg" alt="">
+                    <a data-scroll href="#appetite"><img class="img-responsive" src="img/getstarted.jpg" alt=""></a>
                 </div>
             </div>
 
@@ -95,9 +95,9 @@
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 <h1>Step 2: Do you exercise?</h1>
-                                <a href="#" class="exerciseBtn button2 js-everyday">Everyday!</a> <br>
-                                <a href="#" class="exerciseBtn button2 js-sometimes">Sometimes</a> <br>
-                                <a href="#" class="exerciseBtn button2 js-never">Never</a>
+                                <a data-scroll href="#letsGo" class="exerciseBtn button2 js-everyday">Everyday!</a> <br>
+                                <a data-scroll href="#letsGo" class="exerciseBtn button2 js-sometimes">Sometimes</a> <br>
+                                <a data-scroll href="#letsGo" class="exerciseBtn button2 js-never">Never</a>
                             </div>
                         </div>
 
