--- a/client/home.html
+++ b/client/home.html
@@ -29,29 +29,29 @@
         <div class="container">
         <section id="getStarted">
             <div class="row">
-                <div class="col-md-6 col-xs-12 text-center">
+                <div class="col-md-12 col-xs-12 text-center">
                     <h1>Let’s count your calories intake</h1>
-                    <h5>we create delicious memories</h5>
                     <p>Fitness 101 is an awareness platform for indivduals to recognise where <br> they lie on the obesity scale.
                         Whether they need to check their diet or <br> they’re good to go.</p>
                     <h4>Testimonials</h4>
                     <div class="row">
                         <div class="col-md-2 col-xs-12 col-md-offset-3">
-                           <h4>Hammad</h4>
-                        </div>
-                        <div class="col-md-3 col-xs-12">
-                            <img class="img-circle" src="img/testimonial.png" alt="testimonial" width="100">
+
                         </div>
                         <div class="col-md-2 col-xs-12">
-                            <h4>Siddiqui</h4>
+                            <img class="img-circle" src="img/testimonial.png" alt="testimonial" width="100">
+
                         </div>
+
                     </div>
 
                     <p>"I’ve become more aware of my body! <br>
-                        Thankyou Fitness 101."</p>
+                        Thank you Fitness 101." -- Hammad Siddiqui</p>
                 </div>
-                <div class="col-md-6">
-                    <a data-scroll href="#appetite"><img class="img-responsive" src="img/getstarted.jpg" alt=""></a>
+                </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <a data-scroll href="#appetite"><img class="img-responsive center-block" src="img/getstarted.jpg" alt=""></a>
                 </div>
             </div>
 
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4 col-xs-12">
+                    <div class="col-md-offset-2 col-md-8 col-xs-12">
                         <select class="form-control chzn-select" multiple="true" name="food" style="width:100%;">
                          {{#each food}}
                             <option value={{value}}>{{meal}}</option>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-4 col-xs-12 text-center">
+                    <div class="col-md-8 col-md-offset-2 col-xs-12 text-center">
                         <h4 style="margin-top: 50px">Enter your Weight</h4>
                         <form class="js-weight">
                             <input style="width: 100%;" class="weightMeasure form-control" type="number" name="weight" placeholder="Only Numbers in KiloGrams" min="0" step="0.5">
@@ -91,7 +91,7 @@
         <section id="exercise">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 col-md-offset-2">
+                    <div class="col-md-12">
                         <div class="row">
                             <div class="col-md-12 text-center">
                                 <h1>Step 2: Do you exercise?</h1>
@@ -100,10 +100,11 @@
                                 <a data-scroll href="#letsGo" class="exerciseBtn button2 js-never">Never</a>
                             </div>
                         </div>
-
                     </div>
-                    <div class="col-md-5 col-xs-12 col-lg-5  col-sm-5 text-center">
-                        <div id="letsGo">
+                    </div>
+                <div class="row">
+                    <div class="col-md-12 col-xs-12 col-lg-12  col-sm-12 text-center">
+                        <div id="letsGo" class="center-block">
                             <h2>Step 3
                                 Calculator GO</h2>
                             <p>By clicking the Go buton below you agree that
@@ -135,7 +136,7 @@
                 </div>
 
                 <img class="img-responsive center-block" src="img/{{bodyType}}.png" alt="">
-                <h5>You will get/remain: <span class="values">{{bodyType}}</span></h5>
+                <h5><span class="values">{{bodyType}}</span></h5>
             </div>
         </div>
     </div>
@@ -148,7 +149,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-5 col-md-offset-3 col-sm-5 col-sm-offset-4 text-center">
-                    <p>Project by: <a href="http://hammadsiddiqui.net">Hammad Siddiqui</a>, Misbah Azhar &amp; Sakina Ijaz</p>
+                    <p>Project by: <a href="http://hammadsiddiqui.net">Hammad Siddiqui</a>, Misbah Azhar &amp;amp; Sakina Ijaz</p>
                 </div>
 
             </div>
