added gender feature

--- a/client/home.html
+++ b/client/home.html
@@ -45,8 +45,7 @@
 
                     </div>
 
-                    <p>"I’ve become more aware of my body! <br>
-                        Thank you Fitness 101." -- Hammad Siddiqui</p>
+                    <p>"Fitness 101 has helped me become more aware of my Diet." -- Hammad Siddiqui</p>
                 </div>
                 </div>
             <div class="row">
